--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  border: 5px solid #008006;
   font-family: "Open Sans", sans-serif;
   background: #040404;
   color: #fff;
@@ -15,7 +14,6 @@ body {
 /* HEADER */
 #header {
   background: no-repeat url(../../public/img/accueil1.jpg) top/cover !important;
-  border: 5px solid red;
   transition: ease-in-out 0.3s;
   position: relative;
   height: 100vh;
@@ -44,7 +42,6 @@ body {
   top: 0px;
 }
 #header .nav-menu {
-  border: 5px solid #f4f804;
   margin-right: 70px;
   width: 100%;
 }
@@ -75,24 +72,13 @@ body {
 
 /* FIN HEADER */
 main {
-  border: 5px solid #f85104;
   /* FIN RESEAUX SOCIAUX */
   /* FIN CONTAINER */
 }
-main .container-fluid h2 {
-  border: 5px solid #00e1ff;
-  font-size: 3rem !important;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 1;
-  margin-top: 100px;
-}
-main .container-fluid h2:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
 main .container-fluid .fa-facebook-f {
+  position: fixed !important;
   right: 30px;
-  top: 30%;
+  top: 40%;
   position: absolute;
   font-size: 1.5rem;
   color: #fff;
@@ -101,8 +87,9 @@ main .container-fluid .fa-facebook-f:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container-fluid .fa-twitter {
+  position: fixed !important;
   right: 30px;
-  top: 37%;
+  top: 50%;
   position: absolute;
   font-size: 1.5rem;
   color: #fff;
@@ -111,8 +98,9 @@ main .container-fluid .fa-twitter:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container-fluid .fa-instagram {
+  position: fixed !important;
   right: 30px;
-  top: 44%;
+  top: 60%;
   position: absolute;
   font-size: 1.5rem;
   color: #fff;
@@ -120,14 +108,15 @@ main .container-fluid .fa-instagram {
 main .container-fluid .fa-instagram:hover {
   color: rgba(255, 255, 255, 0.7);
 }
-main .container-fluid .fa-snapchat-ghost {
+main .container-fluid .fa-youtube {
+  position: fixed !important;
   right: 30px;
-  top: 51%;
+  top: 70%;
   position: absolute;
   font-size: 1.5rem;
   color: #fff;
 }
-main .container-fluid .fa-snapchat-ghost:hover {
+main .container-fluid .fa-youtube:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container-fluid .fa-whatsapp {
@@ -154,13 +143,22 @@ main .container {
   /* SECTION 11 */
   /* FIN SECTION 11 */
 }
+main .container h2 {
+  font-size: 3rem !important;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1;
+  margin-top: 100px;
+}
+main .container h2:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
 main .container .section1 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section1 .rapha {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
+  padding: 0 !important;
 }
 main .container .section1 h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -177,28 +175,25 @@ main .container .section1 p:hover {
 main .container .section1 .connectees {
   background-image: url(../../public/img/rapha.jpg) !important;
   background-position: center;
-  height: 100vh !important;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
+  height: 100vh !important;
 }
 main .container .section1 img {
-  border: 5px solid lime;
-  width: 100%;
-  height: 100vh;
+  width: 100% !important;
+  height: 100vh !important;
   transition: transform 1.5s;
 }
 main .container .section1 img:hover {
   transform: scale(1.1);
 }
 main .container .section2 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section2 .lamia {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
+  padding: 0 !important;
 }
 main .container .section2 .lamia h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -218,10 +213,8 @@ main .container .section2 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section2 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -230,12 +223,10 @@ main .container .section2 img:hover {
   transform: scale(1.1);
 }
 main .container .section3 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section3 .justine {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section3 .justine h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -255,10 +246,8 @@ main .container .section3 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section3 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -267,12 +256,10 @@ main .container .section3 img:hover {
   transform: scale(1.1);
 }
 main .container .section4 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section4 .patrick {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section4 .patrick h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -292,10 +279,8 @@ main .container .section4 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section4 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -304,12 +289,10 @@ main .container .section4 img:hover {
   transform: scale(1.1);
 }
 main .container .section5 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section5 .barbara {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section5 .barbara h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -329,10 +312,8 @@ main .container .section5 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section5 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -341,12 +322,10 @@ main .container .section5 img:hover {
   transform: scale(1.1);
 }
 main .container .section6 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section6 .latifa {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section6 .latifa h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -367,10 +346,8 @@ main .container .section6 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section6 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -379,12 +356,10 @@ main .container .section6 img:hover {
   transform: scale(1.1);
 }
 main .container .section7 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section7 .melodie {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section7 .melodie h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -405,10 +380,8 @@ main .container .section7 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section7 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -417,12 +390,10 @@ main .container .section7 img:hover {
   transform: scale(1.1);
 }
 main .container .section8 {
-  border: 5px solid #ff00bf;
   margin-top: 100px !important;
 }
 main .container .section8 .daniele {
   background: rgba(255, 255, 255, 0.08) !important;
-  border: 5px solid #00ff4c;
 }
 main .container .section8 .daniele h3:hover {
   color: rgba(255, 255, 255, 0.7);
@@ -443,10 +414,8 @@ main .container .section8 .connectees {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  border: 5px solid red;
 }
 main .container .section8 img {
-  border: 5px solid lime;
   width: 100%;
   height: 100vh;
   transition: transform 1.5s;
@@ -455,46 +424,44 @@ main .container .section8 img:hover {
   transform: scale(1.1);
 }
 main .container .section9 {
-  border: 5px solid #ff00bf;
-  width: 100%;
   margin-top: 100px !important;
 }
 main .container .section9 h2 {
-  border: 5px solid #00e1ff;
+  margin-top: 0px;
+  margin-bottom: 50px;
   font-size: 3rem !important;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1;
-  margin-bottom: 100px;
 }
 main .container .section9 h2:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container .section9 P {
+  width: 100% !important;
   padding: 30px;
-  height: 47vh;
+  height: 49vh;
   margin-bottom: 14px;
 }
 main .container .section9 P:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container .section9 .propos {
-  border: 5px solid #00ff0d;
   background: rgba(255, 255, 255, 0.08) !important;
 }
 main .container .section9 .img {
-  border: 5px solid #eeff00;
-  height: 100vh;
+  margin-right: 0 !important;
+  padding-right: 0 !important;
+  height: 100vh !important;
+  width: 100% !important;
 }
 main .container .section10 {
   margin-top: 100px !important;
-  border: 5px solid #ff00bf;
   background: rgba(255, 255, 255, 0.08);
-  margin: auto;
-  width: 100%;
+  margin-top: 100px !important;
 }
 main .container .section10 h2 {
-  border: 5px solid #00e1ff;
+  margin-top: 0px !important;
   font-size: 3rem !important;
   font-weight: 700;
   text-transform: uppercase;
@@ -507,25 +474,17 @@ main .container .section10 h2:hover {
 main .container .section10 h3 {
   padding: 50px;
   text-transform: uppercase;
-  text-align: center;
-  border: 5px solid aqua;
+  text-align: center !important;
 }
 main .container .section10 p {
-  padding: 30px 200px;
-}
-main .container .section10 .book {
-  background-color: rgba(255, 255, 255, 0.7);
-  width: 60%;
-  margin: auto;
+  padding: 10px 5px !important;
 }
 main .container .section11 {
-  border: 5px solid #ff00bf;
   background: rgba(255, 255, 255, 0.08);
-  width: 100%;
   margin-top: 100px !important;
 }
 main .container .section11 h2 {
-  border: 5px solid #00e1ff;
+  margin-top: 0px !important;
   font-size: 3rem !important;
   font-weight: 700;
   text-transform: uppercase;
@@ -536,25 +495,19 @@ main .container .section11 h2:hover {
   color: rgba(255, 255, 255, 0.7);
 }
 main .container .section11 h3 {
-  padding: 50px;
+  width: 100%;
   text-transform: uppercase;
-  text-align: center;
-  border: 5px solid aqua;
 }
 main .container .section11 p {
-  padding: 30px 200px;
-  border: 5px solid #ff002b;
-}
-main .container .section11 .infos {
   padding: 30px 150px;
   margin-bottom: 50px auto;
-  border: 5px solid #d0ff00;
 }
 main .container .section11 a {
   color: #fff;
 }
 main .container .section11 .newletter {
   background-color: rgba(255, 255, 255, 0.7);
+  margin-bottom: 50px !important;
 }
 main .container .section11 .newletter .input {
   background-color: transparent;
@@ -571,11 +524,9 @@ footer {
   height: 30vh !important;
 }
 footer .para1 {
-  border: 5px solid rebeccapurple;
   padding: 40px !important;
 }
 footer span {
-  border: 5px solid #993341;
   margin-right: 60px;
   font-size: 1.2rem;
 }
@@ -599,12 +550,7 @@ footer .copy {
     margin-top: 50px;
   }
   main .container {
-    /*  FIN SECTION 1 à 11 */
-    /* FIN SECTION 9 */
-    /* SECTION 10 */
-    /* FIN SECTION 10 */
     /* SECTION 11 */
-    /* FIN SECTION 11 */
   }
   main .container .section1,
 main .container .section2,
@@ -614,41 +560,67 @@ main .container .section5,
 main .container .section6,
 main .container .section7,
 main .container .section8,
-main .container .section9,
 main .container .section10,
 main .container .section11 {
     margin-top: 50px !important;
   }
-  main .container .section11 .infos {
-    padding: 30px 100px;
-    margin-bottom: 50px auto;
-  }
-  main .container .section9 h2 {
+  main .container .section1 h2,
+main .container .section2 h2,
+main .container .section3 h2,
+main .container .section4 h2,
+main .container .section5 h2,
+main .container .section6 h2,
+main .container .section7 h2,
+main .container .section8 h2,
+main .container .section10 h2,
+main .container .section11 h2 {
     font-size: 2.5rem !important;
-    margin-bottom: 50px;
+  }
+  main .container .section1 p,
+main .container .section2 p,
+main .container .section3 p,
+main .container .section4 p,
+main .container .section5 p,
+main .container .section6 p,
+main .container .section7 p,
+main .container .section8 p,
+main .container .section10 p,
+main .container .section11 p {
+    margin: 30px !important;
+  }
+  main .container .section1 img,
+main .container .section2 img,
+main .container .section3 img,
+main .container .section4 img,
+main .container .section5 img,
+main .container .section6 img,
+main .container .section7 img,
+main .container .section8 img,
+main .container .section10 img,
+main .container .section11 img {
+    height: 70vh !important;
+  }
+  main .container .section9 {
+    margin-top: 50px !important;
   }
   main .container .section9 P {
-    padding: 30px !important;
+    height: 44.2vh;
+  }
+  main .container .section9 .img {
+    height: 90vh !important;
   }
   main .container .section10 h2 {
-    font-size: 2.5rem !important;
-    margin-bottom: 50px;
+    margin: 50px 0 0 !important;
   }
-  main .container .section10 h3 {
-    padding: 0px;
-  }
-  main .container .section10 p {
-    padding: 30px;
+  main .container .section11 {
+    margin: 50px 0 !important;
   }
   main .container .section11 h2 {
-    font-size: 2.5rem !important;
+    color: aqua;
+    margin: 50px auto !important;
   }
   main .container .section11 h3 {
     padding: 0px;
-  }
-  main .container .section11 .para {
-    font-size: 2rem !important;
-    margin-top: 50px;
   }
   main .container .section11 p {
     padding: 30px;
@@ -686,11 +658,27 @@ main .container .section11 {
   /* FIN HEADER */
   main {
     overflow: hidden !important;
+    /* FIN RESEAUX SOCIAUX */
     /* FIN CONTAINER */
   }
   main .container-fluid h2 {
     font-size: 2rem !important;
     margin-top: 50px;
+  }
+  main .container-fluid .fa-facebook-f {
+    top: 25%;
+  }
+  main .container-fluid .fa-twitter {
+    top: 35%;
+  }
+  main .container-fluid .fa-instagram {
+    top: 45%;
+  }
+  main .container-fluid .fa-youtube {
+    top: 55%;
+  }
+  main .container-fluid .fa-whatsapp {
+    top: 58%;
   }
   main .container {
     /*  FIN SECTION 1 à 11 */
@@ -743,17 +731,29 @@ main .container .section11 {
   main .container .section10 p {
     padding: 30px;
   }
+  main .container .section11 {
+    text-align: center !important;
+    margin: auto !important;
+  }
   main .container .section11 h2 {
     font-size: 2rem !important;
   }
-  main .container .section11 h3 {
-    padding: 0px;
+  main .container .section11 .moi {
+    border: 5px solid teal;
   }
-  main .container .section11 .para {
-    font-size: 1.6em !important;
+  main .container .section11 h3 {
+    text-align: center;
+    margin: auto 0 !important;
+    width: 100%;
+  }
+  main .container .section11 .mail {
+    color: aqua;
+    text-align: center !important;
+    margin: auto !important;
   }
   main .container .section11 p {
-    padding: 30px;
+    margin: auto 0 !important;
+    padding: 30px 100px !important;
   }
 
   /* FIN MAIN */
